Tiles no longer overflow.

--- a/public/app/grid.css
+++ b/public/app/grid.css
@@ -22,6 +22,7 @@
 
 .tile {
   position: absolute;
+  overflow: hidden;
 }
 
 .tile-map {
